@@ -274,6 +274,9 @@ Release 2.6.0 - UNRELEASED
     YARN-2562. Changed ContainerId#toString() to be more readable. (Tsuyoshi
     OZAWA via jianhe)
 
+    YARN-2629. Made the distributed shell use the domain-based timeline ACLs.
+    (zjshen)
+
   OPTIMIZATIONS
 
   BUG FIXES
